--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,6 @@
-body {
-  background-color: #70df70;
-}
+@use 'reboot';
+@use 'page-header';
+@use 'header-style';
+@use 'todoBody';
+@use 'footer-style';
 /*# sourceMappingURL=styles.css.map */
