--- a/src/scss/_header-style.scss
+++ b/src/scss/_header-style.scss
@@ -1,5 +1,5 @@
 .header-style{
-    background-color: cornflowerblue;
+    background-color: #5364FA;
     padding: 4rem 0;
     text-align: center;
     font-size: 3rem;
