--- a/src/scss/_todoBody.scss
+++ b/src/scss/_todoBody.scss
@@ -36,25 +36,29 @@
    
 }
 .end-style{
-    display: flex;
-    flex-direction: row;
+   
+    flex-direction: column;
     gap: 1rem;
     margin-left: auto;
         padding: 10px 8px;
     button{
-        padding: 2px 4px;
-        
+        width: 5rem;
+        height: 2rem;
+        border-radius: 10px;
+        border: 1.5px;
         font-size: 1rem;
        
     }
     button:first-of-type{
-        background-image: linear-gradient(#5364FA, silver);
+        background-image: linear-gradient(#5364FA, #B5BCF7);
+        border-image: linear-gradient( #B5BCF7, #5364FA);
         margin-right: .65rem;
         color: white;
         
     }
     button:last-of-type{
-        background-image: linear-gradient(red, silver);
+        background-image: linear-gradient(6deg,red, rgb(105, 98, 98));
+        border-image: linear-gradient( rgb(105, 98, 98),red,);
         color: white;
         
     }
