--- a/src/scss/_todoBody.scss
+++ b/src/scss/_todoBody.scss
@@ -21,6 +21,9 @@
     display: flex;
     flex-direction: row;  
     margin: 2rem;  
+    li :last-of-type{
+        margin-bottom: 2rem;
+    }
     h2{
         font-weight: 900;
         font-size: 1.25rem;
