--- a/src/scss/_footer-style.scss
+++ b/src/scss/_footer-style.scss
@@ -2,11 +2,12 @@
     position: fixed;
     left: 0;
     bottom: 0;
+    right: 0;
     width: 100%;
     background-color: #5364FA;
     color: white;
     text-align: end;
-    margin-top: 4rem;
+    margin-top: 10rem;
 }
 .footer-button{
     padding: 1rem;
