--- a/src/scss/_reboot.scss
+++ b/src/scss/_reboot.scss
@@ -36,7 +36,7 @@
      "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    font-size: 1rem;
    font-weight: 400;
-   line-height: 1.5;
+  //  line-height: 1.5;
    color: #212529;
    text-align: left;
    background-color: #fff;
