--- a/src/scss/_todoBody.scss
+++ b/src/scss/_todoBody.scss
@@ -1,13 +1,23 @@
 .directory{
     width: 100%;
     max-width: 100%;
-    padding: 3rem 1rem 0;
-    height: 720px;
+    padding: 0rem 1rem;
+    height: 75vh;
     overflow: auto;
     border-top: 5px solid #5364FA;
-    li :last-of-type{
-        margin-bottom: 3rem;
+    margin-bottom: 2rem;
+    li :last-of-type {
+        margin-bottom: .5rem;
     }
+}
+.wrapper{
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+body{
+    height: 90%;
 }
 .card-style{
     margin-top: 2rem;
@@ -15,7 +25,7 @@
     padding: .5rem .5rem .5rem .5rem;
     display: flex;
     flex-direction: row;  
-    margin: 2rem;  
+    // margin: 2rem;  
     h2{
         font-weight: 900;
         font-size: 1.25rem;
@@ -27,15 +37,16 @@
 .start-style{
    display: flex;
    flex-direction: column;
-   margin-right: auto;
+   
 }
+
 .end-style{
-    flex-direction: column;
+    flex-direction: row;
     gap: 1rem;
     margin-left: auto;
         padding: 10px 8px;
     button{
-        width: 5rem;
+        width: 3.5rem;
         height: 2rem;
         border-radius: 5px;
         border: 1.5px;
@@ -44,7 +55,7 @@
     button:first-of-type{
         background-image: linear-gradient(#5364FA, #B5BCF7);
         border-image: linear-gradient( #B5BCF7, #5364FA);
-        margin-right: .65rem;
+        
         color: white;
         
     }
@@ -72,8 +83,8 @@
     border-left: 2rem rgb(55, 236, 10) solid;
 }
 .health-style{
-    border: 1px solid rgb(51, 36, 51);
-    border-left: 2rem rgb(51, 36, 51) solid;
+    border: 1px solid red;
+    border-left: 2rem red solid;
 }
 
 
