--- a/src/scss/_todoBody.scss
+++ b/src/scss/_todoBody.scss
@@ -13,6 +13,7 @@
 .wrapper{
     display: flex;
     min-height: 100vh;
+    min-width: 480px;
     flex-direction: column;
     justify-content: flex-start;
 }
