--- a/src/scss/_todoBody.scss
+++ b/src/scss/_todoBody.scss
@@ -16,6 +16,7 @@
     min-width: 480px;
     flex-direction: column;
     justify-content: flex-start;
+    padding-bottom: 2rem;
 }
 body{
     height: 90%;
