--- a/src/scss/_todoBody.scss
+++ b/src/scss/_todoBody.scss
@@ -12,11 +12,11 @@
 }
 .wrapper{
     display: flex;
-    min-height: 100vh;
+    min-height: 105%;
     min-width: 480px;
     flex-direction: column;
     justify-content: flex-start;
-    padding-bottom: 2rem;
+    padding-bottom: 6rem;
 }
 body{
     height: 90%;
