--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,4 +2,7 @@
 @use 'page-header';
 @use 'header-style';
 @use 'todoBody';
-@use 'footer-style'
+@use 'footer-style';
+@use 'delete-table';
+@use 'add-page';
+@use 'edit-page'
