--- a/src/scss/_footer-style.scss
+++ b/src/scss/_footer-style.scss
@@ -6,7 +6,7 @@
     width: 100%;
     background-color: #5364FA;
     color: white;
-    text-align: end;
+    text-align: center;
     margin-top: 10rem;
 }
 .footer-button{
