--- a/src/scss/_todoBody.scss
+++ b/src/scss/_todoBody.scss
@@ -1,11 +1,12 @@
 .directory{
     width: 100%;
-    max-width: 100%;
-    padding: 0rem 1rem;
+    
+    max-width: 680px;
+    min-width: 480px;
     height: 75vh;
     overflow: auto;
     border-top: 5px solid #5364FA;
-    margin-bottom: 2rem;
+    margin-bottom: 6rem;
     li :last-of-type {
         margin-bottom: .5rem;
     }
@@ -13,10 +14,11 @@
 .wrapper{
     display: flex;
     min-height: 105%;
-    min-width: 480px;
+    min-width:440px;
     flex-direction: column;
     justify-content: flex-start;
     padding-bottom: 6rem;
+    align-items: center;
 }
 body{
     height: 90%;
@@ -26,7 +28,8 @@ body{
     border-radius: 5px;
     padding: .5rem .5rem .5rem .5rem;
     display: flex;
-    flex-direction: row;  
+    flex-direction: row;
+    min-width: 480px;  
     // margin: 2rem;  
     h2{
         font-weight: 900;
@@ -60,29 +63,29 @@ body{
         border-image: linear-gradient( #B5BCF7, #5364FA);
     }
     button:last-of-type{
-        background-image: linear-gradient(45deg,red, rgb(105, 98, 98));
-        border-image: linear-gradient( rgb(105, 98, 98),red,); 
+        background-image: linear-gradient(45deg,red, rgb(156, 132, 132));
+        border-image: linear-gradient( rgb(156, 132, 132),red,); 
     }
 }
 .work-style{
-    border: 1px solid rgb(60, 163, 94);
-    border-left: 2rem rgb(60, 163, 94) solid;
+    border: 1px solid rgb(246, 81, 29);
+    border-left: 2rem rgb(246, 81, 29) solid;
 }
 .school-style{
-    border: 1px solid rgb(28, 25, 201);
-    border-left: 2rem rgb(28, 25, 201) solid;
+    border: 1px solid rgb(255, 180, 0);
+    border-left: 2rem rgb(255, 180, 0) solid;
 }
 .home-style{
-    border: 1px solid rgb(70, 155, 148);
-    border-left: 2rem rgb(70, 155, 148) solid;
+    border: 1px solid rgb(0, 166, 237);
+    border-left: 2rem rgb(0, 166, 237) solid;
 }
 .social-style{
-    border: 1px solid rgb(55, 236, 10);
-    border-left: 2rem rgb(55, 236, 10) solid;
+    border: 1px solid rgb(127, 184, 0);
+    border-left: 2rem rgb(127, 184, 0) solid;
 }
 .health-style{
-    border: 1px solid red;
-    border-left: 2rem red solid;
+    border: 1px solid rgb(13, 44, 84);
+    border-left: 2rem rgb(13, 44, 84) solid;
 }
 
 
