--- a/src/scss/_todoBody.scss
+++ b/src/scss/_todoBody.scss
@@ -7,9 +7,7 @@
     overflow: auto;
     border-top: 5px solid #5364FA;
     margin-bottom: 6rem;
-    li :last-of-type {
-        margin-bottom: .5rem;
-    }
+    
 }
 .wrapper{
     display: flex;
@@ -34,9 +32,20 @@ body{
     h2{
         font-weight: 900;
         font-size: 1.25rem;
+        color: rgb(13, 44, 84);
     }
-    p{
+    h3{
+        font-weight: 600;
+        font-size: 1rem;
+        color: #5364FA;
+    }
+    p:first-of-type{
         font-style: italic;
+        color: rgb(127, 184, 0);
+    }
+    p:last-of-type{
+        font-style: italic;
+        color: rgb(0, 166, 237);
     }
 }
 .start-style{
@@ -51,21 +60,13 @@ body{
     margin-left: auto;
         padding: 10px 8px;
     button{
-        width: 3.5rem;
-        height: 2rem;
-        border-radius: 3px;
-        border: 1.5px;
+        border: 0px;
+        border-color:rgba(255,255,255,0);
+        background-color:rgba(255,255,255,0);
         font-size: 1rem; 
-        color: white;
+        color: rgba(255,255,255,0);
     }
-    button:first-of-type{
-        background-image: linear-gradient(45deg,#5364FA, #B5BCF7);
-        border-image: linear-gradient( #B5BCF7, #5364FA);
-    }
-    button:last-of-type{
-        background-image: linear-gradient(45deg,red, rgb(156, 132, 132));
-        border-image: linear-gradient( rgb(156, 132, 132),red,); 
-    }
+
 }
 .work-style{
     border: 1px solid rgb(246, 81, 29);
